--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,16 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    background-color: #00004d;
+}
+
+header h1 {
+    font-size: 65px;
+    color: #fff;
+    background-color: #0f0f5e;
+    padding: 15px;
+    border-radius: 10px;
+    margin-top: 10px;
 }
 
 .container {
@@ -10,17 +20,45 @@ body {
     flex-direction: column;
     align-items: center;
     margin-top: 45px;
+    background-color: #0f0f5e;
+    width: 100%;
+    max-width: 435px;
+    border-radius: 10px;
+    padding: 30px;
 }
 
 .input {
     width: 300px;
     margin-bottom: 15px;
     padding: 5px;
+    font-size: 14px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
 }
 
 .button {
-    padding: 5px;
+    padding: 6px;
     width: 50px;
+    border-radius: 5px;
+    border: none;
+    font-weight: bold;
+}
+
+button {
+    background-color: #1e1e6f;
+    color: #fff;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #3c3c91;
+}
+
+.button:disabled {
+    background-color: #ccc;
+    color: #000;
+    cursor: auto;
 }
 
 .to-do-list {
@@ -30,8 +68,17 @@ body {
 .container-response {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 5px;
     background-color: #ccc;
     margin-bottom: 5px;
     border-radius: 5px;
+    background-color: #2d2d80;
+    color: #fff;
+}
+
+.button-created {
+    padding: 5px;
+    border-radius: 10px;
+    border: none;
 }
